--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,31 +1,26 @@
 ---
-import Navbar from '../components/Navbar.astro';
-
+import Navbar from "../components/Navbar.astro";
 
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
-
 ---
 
 <!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>{title}</title>
-	</head>
-	<body>
-		<main class="flex flex-col h-screen bg-slate text-gray-900">
-			<Navbar />
-			<slot />
-		</main>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>{title}</title>
+  </head>
+  <body>
+    <main class="flex flex-col h-screen bg-slate text-gray-900">
+      <slot />
+    </main>
+  </body>
 </html>
-<style is:global>
-
-</style>
+<style is:global></style>
