--- a/src/pages/program/CalenderView.astro
+++ b/src/pages/program/CalenderView.astro
@@ -17,7 +17,7 @@ import Layout from "../../layouts/Layout.astro";
     <a href="/program">
       <button
         class="bg-green-500 text-white px-4 py-2 rounded mb-4"
-        id="CalenderViewBtn"
+        id="ProgramViewBtn"
       >
         Program View
       </button>
@@ -53,7 +53,7 @@ import Layout from "../../layouts/Layout.astro";
       const fetchWeekData = async (weekOffset: number) => {
         try {
           const response = await fetch(
-            `/api/getWeekData.json?weekOffset=${weekOffset}`,
+            `/api/getWeekData.json?weekOffset=${weekOffset}`
           );
           const data = await response.json();
           return data;
@@ -66,7 +66,7 @@ import Layout from "../../layouts/Layout.astro";
       const fetchPhoneNumber = async (nombre: string) => {
         try {
           const response = await fetch(
-            `/api/getUserPhoneNumber.json?nombre=${nombre}`,
+            `/api/getUserPhoneNumber.json?nombre=${nombre}`
           );
           const data = await response.json();
           return data.telefono;
@@ -120,11 +120,11 @@ import Layout from "../../layouts/Layout.astro";
                           })
                           .join("")}
                       </td>
-                    `,
+                    `
                       )
                       .join("")}
                   </tr>
-                `,
+                `
                   )
                   .join("")}
               </tbody>
@@ -159,13 +159,13 @@ import Layout from "../../layouts/Layout.astro";
                             .join("")}
                         </td>
                       </tr>
-                    `,
+                    `
                       )
                       .join("")}
                   </tbody>
                 </table>
               </div>
-            `,
+            `
               )
               .join("")}
           </div>
@@ -193,7 +193,7 @@ import Layout from "../../layouts/Layout.astro";
       const getWeekDates = (weekOffset: number) => {
         const startOfWeek = new Date();
         startOfWeek.setDate(
-          startOfWeek.getDate() - startOfWeek.getDay() + 1 + weekOffset * 7,
+          startOfWeek.getDate() - startOfWeek.getDay() + 1 + weekOffset * 7
         );
         const dates = [];
         for (let i = 0; i < 7; i++) {
