--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,9 @@ const { title } = Astro.props;
   </head>
   <body>
     <main class="flex flex-col h-screen bg-slate text-gray-900">
+      <nav>
+        <Navbar />
+      </nav>
       <slot />
     </main>
   </body>
