--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,14 +7,15 @@
   >
 </div>
 
-<script>
-  const { signOut } = await import("auth-astro/client");
+// <script>
+  //  const { signOut } = await import("auth-astro/client");
 
-  const logout = document.querySelector("#logout");
+  //  const logout = document.querySelector("#logout");
 
-  logout?.addEventListener("click", async (e) => {
-    e.preventDefault();
-    await signOut();
-    window.location.replace("/signin");
-  });
+  //  logout?.addEventListener("click", async (e) => {
+  //   e.preventDefault();
+  //   await signOut();
+  //   window.location.replace("/signin");
+  //  });
+  //
 </script>
