--- a/src/pages/program/index.astro
+++ b/src/pages/program/index.astro
@@ -22,10 +22,10 @@ const getUsersForTurno = (day: string, turno: string) => {
 const days = [
   "lunes",
   "martes",
-  "miércoles",
+  "miercoles",
   "jueves",
   "viernes",
-  "sábado",
+  "sabado",
   "domingo",
 ];
 const turnos = ["T1", "T2", "T3", "T4"];
@@ -152,10 +152,10 @@ let weekDates = getWeekDates(weekOffset);
     const days = [
       "lunes",
       "martes",
-      "miércoles",
+      "miercoles",
       "jueves",
       "viernes",
-      "sábado",
+      "sabado",
       "domingo",
     ];
 
