--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -1,8 +1,10 @@
 ---
-import DataView from "../components/DataView.astro"
+import  { DataView }  from "../components/DataView.tsx"
 import Layout from "../layouts/Layout.astro"
+
+
 ---
 
 <Layout title="data">
-    <DataView/>
+    <DataView client:only/>
 </Layout>
